<resources>
  <string name="app_name">Txun Txun GMA</string>
  <string name="title_activity_login">Inicia sesión</string>
  <string name="prompt_password">Contraseña</string>
  <string name="sign_in">Iniciar sesión</string>
  <string name="wrong_password">Contraseña incorrecta</string>
  <string name="logout">Cerrar sesión</string>
  <string name="components_card_text">Componentes</string>
  <string name="rates_card_text">Tarifas</string>
  <string name="releases_card_text">Comunicados</string>
  <string name="calendar_card_text">Agenda</string>
  <string name="there_arent_components">Aún no hay componentes registrados</string>
  <string name="subtitle_components_fragment">A continuacion presentamos la lista actual de los miembros de la cuadrilla</string>
  <string name="action_add">Añadir</string>
  <string name="hint_new_component">Nombre del componente</string>
  <string name="cancel">Cancelar</string>
  <string name="msg_new_component">Escribe a continuación el nombre del nuevo componente</string>
  <string name="continue_text">Continuar</string>
  <string name="remove_confirm_dialog_title">¿Estás seguro?</string>
  <string name="remove_confirm_dialog_message">Si continuas se eliminara de forma permanente</string>
  <string name="msg_modify_component">Modifica aqui el nombre del componente</string>
  <string name="acccept">Aceptar</string>
  <string name="separator">...........................................................................................................</string>
  <string name="price">%s €</string>
  <string name="rate_description_hint">Nombre de la cuota</string>
  <string name="hint_rate_amount">Precio</string>
  <string name="hint_rate_name">Nombre de la cuota</string>
  <string name="rate_amount">Precio de la cuota</string>
  <string name="rate_name">Nombre de la cuota</string>
  <string name="add">Añadir</string>
  <string name="rate_add_succesfully">Tarifa añadida con exito</string>
  <string name="error_ocurred">Ha ocurrida un error</string>
  <string name="modify">Modificar</string>
  <string name="fragment_title_home">Txun Txun G.M.A.</string>
  <string name="fragment_title_components">Componentes</string>
  <string name="fragment_title_rates">Cuotas</string>
  <string name="fragment_title_events">Agenda</string>
  <string name="hint_event_name">Nombre del evento</string>
  <string name="event_name">Nombre del evento</string>
  <string name="hint_event_description">Descripcion</string>
  <string name="event_description">Descripcion del evento</string>
  <string name="hint_event_date">Fecha del evento</string>
  <string name="incomplete_fields">Campos incompletos</string>
  <string name="hint_event_hour">Hora del evento</string>
  <string name="release_name">Titulo del comunicado</string>
  <string name="hint_release_name">Titulo</string>
  <string name="hint_release_text">Comunicado</string>
  <string name="release_text">Comunicado</string>
  <string name="fragment_title_releases">Comunicados</string>
  <string name="transitionName_cardBackground">cardBrackground_transitionName</string>
  <string name="activate_alarm">Activar alarma</string>
  <string name="desactivate_alarm">Desactivar alarma</string>
  <string name="alarm_activated_description">Se te avisara 2 horas antes del evento.</string>
  <string name="alarm_defused_description">Se ha eliminado el aviso</string>
  <string name="notification_description">Pulse para ver el evento</string>
  <string name="not_events_yet">No hay eventos programados.</string>
  <string name="include_list_to_release">Incluir lista para componentes</string>
  <string name="sign_up">!!Apúntate¡¡</string>
  <string name="msg_sign_up_release">Escribe tu nombre para apuntarte</string>
  <string name="action_sign_up">Apuntarme</string>
    <string name="already_signed">Ya estas apuntado</string>

    <string-array name="roles">
    <item>Componente</item>
    <item>Junta directiva</item>
  </string-array>
</resources>
