<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_release"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/release_name"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/release_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="text"
        android:lines="1"
        android:hint="@string/hint_release_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/release_text"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/release_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:inputType="textMultiLine"
        android:hint="@string/hint_release_text" />

    <CheckBox
        android:id="@+id/check_include_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/include_list_to_release"/>

</LinearLayout>