<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/event_date"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_date"
        android:drawablePadding="20dp"
        android:textSize="18sp"
        android:textColor="@color/charcoal"
        android:drawableStart="@drawable/calendar_multiselect"
        android:drawableLeft="@drawable/calendar_multiselect"/>

    <TextView
        android:id="@+id/event_hour"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_event_hour"
        android:drawablePadding="20dp"
        android:textSize="18sp"
        android:textColor="@color/charcoal"
        android:paddingTop="10dp"
        android:drawableStart="@drawable/clock_outline"
        android:drawableLeft="@drawable/clock_outline"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/event_name"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="text"
        android:lines="1"
        android:hint="@string/hint_event_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/event_description"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edit_event_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:inputType="textMultiLine"
        android:hint="@string/hint_event_description"
        />

</LinearLayout>